--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -620,7 +620,8 @@ p.has-text-align-left .has-text-align-left  {
 
 
 // .wp-block-cover__background
-.post-68 img.attachment-full {
+// .post-68 img.attachment-full 
+img.attachment-full {
     // background-image: url(img/ham-burger-with-vegetables-1639557.png);
     // background-size: cover;
     height: 225px;
@@ -652,8 +653,9 @@ p.has-text-align-left .has-text-align-left  {
     }
 }
 
-.post-68 h2.wp-block-heading,
-.post-188 h2.wp-block-heading{
+// .post-68 h2.wp-block-heading,
+// .post-188 h2.wp-block-heading
+h2.wp-block-heading{
     color: #3C2A10;
     font-size: 2.8rem;
     font-weight: bold;
@@ -683,8 +685,9 @@ p.has-text-align-left .has-text-align-left  {
 
 
 
-.post-68 p,
-.post-188 p{
+// .post-68 p,
+// .post-188 p
+.wrapper-single-content>p:first-of-type{
     color: #3c2a10;
     font-size: 1.6rem;
     margin: 0 5vw;
@@ -709,8 +712,9 @@ p.has-text-align-left .has-text-align-left  {
     }
 }
 
-.post-68 h3.wp-block-heading,
-.post-188 h3.wp-block-heading {
+// .post-68 h3.wp-block-heading,
+// .post-188 h3.wp-block-heading
+h3.wp-block-heading{
     color: #3c2a10;
     font-size: 2.4rem;
     font-weight: bold;
@@ -771,9 +775,10 @@ p.has-text-align-left .has-text-align-left  {
 // }
 
 //WPメディア上の横広画像
-.post-68 figure.p-wp-image__media,
-.post-188 figure.p-wp-image__media {
-    
+// .post-68 figure.p-wp-image__media,
+// .post-188 figure.p-wp-image__media
+figure.wp-block-image.size-full {
+    width: 100%;
 
     display: flex;
     height: 124px;
@@ -788,7 +793,8 @@ p.has-text-align-left .has-text-align-left  {
 }
 
 
-img.wp-image-350 {
+// img.wp-image-350
+figure.wp-block-image.size-full img {
     object-fit: cover;
     object-position: 50% 100%;
     margin: 0 5vw;
@@ -822,19 +828,19 @@ img.wp-image-350 {
     }
 }
 
-.post-68 .wp-block-media-text,
-.post-188 .wp-block-media-text {
-    @include mobile {
-    grid-template-columns: 40% auto!important;
-    }
-}
+// .post-68 .wp-block-media-text,
+// .post-188 .wp-block-media-text {
+//     @include mobile {
+//     grid-template-columns: 40% auto!important;
+//     }
+// }
 
-.wp-image-170,
-.wp-image-195 {
-    height: auto;
-    overflow: hidden;
-    flex-basis: 40%;
-}
+// .wp-image-170,
+// .wp-image-195 {
+//     height: auto;
+//     overflow: hidden;
+//     flex-basis: 40%;
+// }
 
 
 .p-wrap__single-media {
@@ -877,12 +883,11 @@ img.wp-image-350 {
 //     }
 // }
 
-.wp-block-galley {
-    gap: 20px;
-}
 
-.wp-image-171,
-.wp-image-356 {
+
+// .wp-image-171,
+// .wp-image-356 
+figure.wp-block-image.size-large img{
     display: block;
     object-fit: cover;
     margin: 0 auto 30px;
@@ -902,20 +907,21 @@ img.wp-image-350 {
 // WPギャラリーの画像------------------------------------
 
 
-.wrapper-single-content .wp-block-galley__single,
-.wp-block-gallery.wp-block-gallery-2 {
+// .wrapper-single-content .wp-block-galley__single,
+// .wp-block-gallery.wp-block-gallery-2
+.wp-block-gallery.has-nested-images.columns-1.is-cropped.wp-block-gallery-1 {
         display: grid;
         grid-template-columns: 1fr;
-        gap: 20px !important;
+        gap: 20px;
         margin: 0 20px;
         @include tablet {
             grid-template-columns: 1fr 1fr;
-            gap: 16px !important;
+            gap: 16px;
             margin: 0 60px;
         }
         @include pc {
             grid-template-columns: 1fr 1fr 1fr;
-            gap: 20px !important;
+            gap: 20px;
             margin: 0 100px;
         }
     
@@ -925,8 +931,9 @@ img.wp-image-350 {
 //WPリスト---------
 
 // .p-list__single 
-.post-68 ul,
-.post-188 ul{
+// .post-68 ul,
+// .post-188 ul
+.wrapper-single-content ul{
     font-size: 16px;
     color: #3C2A10;
     margin: 17px 6vw;
@@ -963,16 +970,19 @@ ol {
     margin-bottom: 20px;
 }
 
-.post-68 ul.wp-list1-single,
-.post-188 ul.wp-list1-single {
+// .post-68 ul.wp-list1-single,
+// .post-188 ul.wp-list1-single 
+.wrapper-single-content>ul:first-of-type{
     @include tablet {
         margin: 61px 6vw;
     }
     
 }
-.post-68 ul.wp-list2-single,
-.post-188 ul.wp-list2-single {
+// .post-68 ul.wp-list2-single,
+// .post-188 ul.wp-list2-single
+.wrapper-single-content>ul:last-of-type{
     @include tablet {
+        margin-top: 50px;
         margin-bottom: 61px;
     }
 }
@@ -982,8 +992,9 @@ ol {
 
 // WPタグのリスト-------------------------------------------------------
 // .p-container__tag-list-single
-.post-68 .tag-list,
-.post-188 .tag-list {
+// .post-68 .tag-list,
+// .post-188 .tag-list
+.wrapper-single-content>ul:last-of-type{
     font-size: 16px;
     background-color: #f5f5f5;
     margin:30px 5vw 60px 5vw;
@@ -994,11 +1005,11 @@ ol {
     }
 }
 // .p-child-list__tag
-.post-68 .tag-list br,
-.post-188 .tag-list br {
-    margin-left: 2.5em;
-    margin-bottom: 0;
-}
+// .post-68 .tag-list br,
+// .post-188 .tag-list br {
+//     margin-left: 2.5em;
+//     margin-bottom: 0;
+// }
 
 // WPテーブル------------------------------------------------------
 //.p-container__single-table
@@ -1041,7 +1052,7 @@ table tr td:nth-child(2) {
 }
 
 //.p-button__single-under-main
-.wp-block-button a {
+.wp-block-button>a {
     cursor: pointer;
     border:1px solid #707070;
     display: block;
@@ -1062,26 +1073,15 @@ table tr td:nth-child(2) {
 
 
 // WPボタン下のテキスト-------------------------------------------------------
-.p-wrapper-text__single-under-btn {
+// .p-wrapper-text__single-under-btn 
+.wrapper-single-content>p:last-of-type{
     display: block;
     margin:40px 5vw 80px;
     word-wrap: break-word;
-    @include pc {
-        width: 70vw;
-    }
-}
-
-//.p-text__single-under-btn
-.post-68 p {
+    margin-bottom: 69px;
     font-size: 16px;
     font-weight: 700;
     font-style: normal;
-    
-}
-
-.post-68 p.wp-archive-last-text,
-.post-188 p.wp-archive-last-text {
-    margin-bottom: 69px;
     @include tablet {
         margin-bottom: 150px;
         margin-top: 61px;
@@ -1090,6 +1090,26 @@ table tr td:nth-child(2) {
         margin-bottom: 274px;
     }
 }
+
+//.p-text__single-under-btn
+// .post-68 p {
+//     font-size: 16px;
+//     font-weight: 700;
+//     font-style: normal;
+    
+// }
+
+// .post-68 p.wp-archive-last-text,
+// .post-188 p.wp-archive-last-text {
+//     margin-bottom: 69px;
+//     @include tablet {
+//         margin-bottom: 150px;
+//         margin-top: 61px;
+//     }
+//     @include pc {
+//         margin-bottom: 274px;
+//     }
+// }
 
 
 
