--- a/style.css
+++ b/style.css
@@ -847,7 +847,7 @@ p.has-text-align-left .has-text-align-left {
   }
 }
 
-.post-68 img.attachment-full {
+img.attachment-full {
   height: 225px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -855,13 +855,13 @@ p.has-text-align-left .has-text-align-left {
   margin: 0;
 }
 @media screen and (min-width: 768px) {
-  .post-68 img.attachment-full {
+  img.attachment-full {
     height: 500px;
     width: 100%;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 img.attachment-full {
+  img.attachment-full {
     width: 100%;
   }
 }
@@ -878,8 +878,7 @@ p.has-text-align-left .has-text-align-left {
   }
 }
 
-.post-68 h2.wp-block-heading,
-.post-188 h2.wp-block-heading {
+h2.wp-block-heading {
   color: #3C2A10;
   font-size: 2.8rem;
   font-weight: bold;
@@ -888,15 +887,13 @@ p.has-text-align-left .has-text-align-left {
   margin-bottom: 25px;
 }
 @media screen and (min-width: 768px) {
-  .post-68 h2.wp-block-heading,
-.post-188 h2.wp-block-heading {
+  h2.wp-block-heading {
     margin: 55px auto 55px 5vw;
     font-size: 3.6rem;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 h2.wp-block-heading,
-.post-188 h2.wp-block-heading {
+  h2.wp-block-heading {
     width: 70vw;
     font-size: 3.6rem;
     margin: 61px auto 61px 5vw;
@@ -909,8 +906,7 @@ p.has-text-align-left .has-text-align-left {
   margin: 0 5vw;
 }
 
-.post-68 p,
-.post-188 p {
+.wrapper-single-content > p:first-of-type {
   color: #3c2a10;
   font-size: 1.6rem;
   margin: 0 5vw;
@@ -933,8 +929,7 @@ p.has-text-align-left .has-text-align-left {
   }
 }
 
-.post-68 h3.wp-block-heading,
-.post-188 h3.wp-block-heading {
+h3.wp-block-heading {
   color: #3c2a10;
   font-size: 2.4rem;
   font-weight: bold;
@@ -943,15 +938,13 @@ p.has-text-align-left .has-text-align-left {
   margin-bottom: 25px;
 }
 @media screen and (min-width: 768px) {
-  .post-68 h3.wp-block-heading,
-.post-188 h3.wp-block-heading {
+  h3.wp-block-heading {
     margin: 55px auto 55px 5vw;
     font-size: 2.8rem;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 h3.wp-block-heading,
-.post-188 h3.wp-block-heading {
+  h3.wp-block-heading {
     width: 70vw;
     font-size: 2.8rem;
     margin: 61px auto 61px 5vw;
@@ -988,28 +981,26 @@ p.has-text-align-left .has-text-align-left {
   margin: 0;
 }
 
-.post-68 figure.p-wp-image__media,
-.post-188 figure.p-wp-image__media {
+figure.wp-block-image.size-full {
+  width: 100%;
   display: flex;
   height: 124px;
   -o-object-position: 50% 90%;
      object-position: 50% 90%;
 }
 @media screen and (min-width: 768px) {
-  .post-68 figure.p-wp-image__media,
-.post-188 figure.p-wp-image__media {
+  figure.wp-block-image.size-full {
     height: 264px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 figure.p-wp-image__media,
-.post-188 figure.p-wp-image__media {
+  figure.wp-block-image.size-full {
     width: 100%;
     height: 500px;
   }
 }
 
-img.wp-image-350 {
+figure.wp-block-image.size-full img {
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: 50% 100%;
@@ -1019,7 +1010,7 @@ img.wp-image-350 {
   height: 100%;
 }
 @media screen and (min-width: 1280px) {
-  img.wp-image-350 {
+  figure.wp-block-image.size-full img {
     height: 100%;
     width: 100%;
     margin: 0 5vw 0;
@@ -1048,20 +1039,6 @@ img.wp-image-350 {
   margin: 0;
 }
 
-@media screen and (max-width: 768px) {
-  .post-68 .wp-block-media-text,
-.post-188 .wp-block-media-text {
-    grid-template-columns: 40% auto !important;
-  }
-}
-
-.wp-image-170,
-.wp-image-195 {
-  height: auto;
-  overflow: hidden;
-  flex-basis: 40%;
-}
-
 @media screen and (min-width: 1280px) {
   .p-wrap__single-media {
     margin: 60px 0;
@@ -1082,12 +1059,7 @@ img.wp-image-350 {
   padding: 0;
 }
 
-.wp-block-galley {
-  gap: 20px;
-}
-
-.wp-image-171,
-.wp-image-356 {
+figure.wp-block-image.size-large img {
   display: block;
   -o-object-fit: cover;
      object-fit: cover;
@@ -1096,54 +1068,47 @@ img.wp-image-350 {
   max-width: 581px;
 }
 @media screen and (min-width: 768px) {
-  .wp-image-171,
-.wp-image-356 {
+  figure.wp-block-image.size-large img {
     margin-bottom: 231px;
     height: 358px;
     width: 581px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .wp-image-171,
-.wp-image-356 {
+  figure.wp-block-image.size-large img {
     width: 35vw;
     margin: 0 auto 60px;
   }
 }
 
-.wrapper-single-content .wp-block-galley__single,
-.wp-block-gallery.wp-block-gallery-2 {
+.wp-block-gallery.has-nested-images.columns-1.is-cropped.wp-block-gallery-1 {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 20px !important;
+  gap: 20px;
   margin: 0 20px;
 }
 @media screen and (min-width: 768px) {
-  .wrapper-single-content .wp-block-galley__single,
-.wp-block-gallery.wp-block-gallery-2 {
+  .wp-block-gallery.has-nested-images.columns-1.is-cropped.wp-block-gallery-1 {
     grid-template-columns: 1fr 1fr;
-    gap: 16px !important;
+    gap: 16px;
     margin: 0 60px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .wrapper-single-content .wp-block-galley__single,
-.wp-block-gallery.wp-block-gallery-2 {
+  .wp-block-gallery.has-nested-images.columns-1.is-cropped.wp-block-gallery-1 {
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px !important;
+    gap: 20px;
     margin: 0 100px;
   }
 }
 
-.post-68 ul,
-.post-188 ul {
+.wrapper-single-content ul {
   font-size: 16px;
   color: #3C2A10;
   margin: 17px 6vw;
 }
 @media screen and (min-width: 1280px) {
-  .post-68 ul,
-.post-188 ul {
+  .wrapper-single-content ul {
     width: 60vw;
   }
 }
@@ -1175,21 +1140,19 @@ ol {
 }
 
 @media screen and (min-width: 768px) {
-  .post-68 ul.wp-list1-single,
-.post-188 ul.wp-list1-single {
+  .wrapper-single-content > ul:first-of-type {
     margin: 61px 6vw;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .post-68 ul.wp-list2-single,
-.post-188 ul.wp-list2-single {
+  .wrapper-single-content > ul:last-of-type {
+    margin-top: 50px;
     margin-bottom: 61px;
   }
 }
 
-.post-68 .tag-list,
-.post-188 .tag-list {
+.wrapper-single-content > ul:last-of-type {
   font-size: 16px;
   background-color: #f5f5f5;
   margin: 30px 5vw 60px 5vw;
@@ -1197,16 +1160,9 @@ ol {
   overflow: hidden;
 }
 @media screen and (min-width: 1280px) {
-  .post-68 .tag-list,
-.post-188 .tag-list {
+  .wrapper-single-content > ul:last-of-type {
     width: 70vw;
   }
-}
-
-.post-68 .tag-list br,
-.post-188 .tag-list br {
-  margin-left: 2.5em;
-  margin-bottom: 0;
 }
 
 .wp-block-table {
@@ -1242,7 +1198,7 @@ table tr td:nth-child(2) {
   }
 }
 
-.wp-block-button a {
+.wp-block-button > a {
   cursor: pointer;
   border: 1px solid #707070;
   display: block;
@@ -1255,42 +1211,28 @@ table tr td:nth-child(2) {
   border-radius: 20px;
 }
 @media screen and (min-width: 1280px) {
-  .wp-block-button a {
+  .wp-block-button > a {
     margin-bottom: 60px;
   }
 }
 
-.p-wrapper-text__single-under-btn {
+.wrapper-single-content > p:last-of-type {
   display: block;
   margin: 40px 5vw 80px;
   word-wrap: break-word;
-}
-@media screen and (min-width: 1280px) {
-  .p-wrapper-text__single-under-btn {
-    width: 70vw;
-  }
-}
-
-.post-68 p {
+  margin-bottom: 69px;
   font-size: 16px;
   font-weight: 700;
   font-style: normal;
 }
-
-.post-68 p.wp-archive-last-text,
-.post-188 p.wp-archive-last-text {
-  margin-bottom: 69px;
-}
 @media screen and (min-width: 768px) {
-  .post-68 p.wp-archive-last-text,
-.post-188 p.wp-archive-last-text {
+  .wrapper-single-content > p:last-of-type {
     margin-bottom: 150px;
     margin-top: 61px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 p.wp-archive-last-text,
-.post-188 p.wp-archive-last-text {
+  .wrapper-single-content > p:last-of-type {
     margin-bottom: 274px;
   }
 }
